# docs/v1/swagger.json
@@ -201,7 +201,7 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "심볼 (예: AAPL)",
+                        "description": "심볼 (예: NVDA)",
                         "name": "symbol",
                         "in": "path",
                         "required": true
@@ -265,7 +265,7 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "심볼 (예: AAPL)",
+                        "description": "심볼 (예: NVDA)",
                         "name": "symbol",
                         "in": "path",
                         "required": true
@@ -337,7 +337,7 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "심볼 (예: AAPL)",
+                        "description": "심볼 (예: NVDA)",
                         "name": "symbol",
                         "in": "path",
                         "required": true
@@ -408,7 +408,7 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "심볼 (예: AAPL)",
+                        "description": "심볼 (예: NVDA)",
                         "name": "symbol",
                         "in": "path",
                         "required": true
@@ -474,7 +474,7 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "심볼 (예: AAPL)",
+                        "description": "심볼 (예: NVDA)",
                         "name": "symbol",
                         "in": "path",
                         "required": true
@@ -540,7 +540,7 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "심볼 (예: AAPL)",
+                        "description": "심볼 (예: NVDA)",
                         "name": "symbol",
                         "in": "path",
                         "required": true
@@ -612,7 +612,7 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "심볼 (예: AAPL)",
+                        "description": "심볼 (예: NVDA)",
                         "name": "symbol",
                         "in": "path",
                         "required": true
@@ -1211,7 +1211,7 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "심볼 (예: AAPL)",
+                        "description": "심볼 (예: NVDA)",
                         "name": "symbol",
                         "in": "path",
                         "required": true
@@ -1267,6 +1267,15 @@
                                 "type": "string"
                             }
                         }
+                    },
+                    "503": {
+                        "description": "장이 닫혔을 때 에러 메시지 반환",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
                     }
                 }
             }
@@ -1287,7 +1296,7 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "심볼 (예: AAPL)",
+                        "description": "심볼 (예: NVDA)",
                         "name": "symbol",
                         "in": "path",
                         "required": true
@@ -1354,6 +1363,15 @@
                                 "type": "string"
                             }
                         }
+                    },
+                    "503": {
+                        "description": "장이 닫혔을 때 에러 메시지 반환",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
                     }
                 }
             },
@@ -1372,7 +1390,7 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "심볼 (예: AAPL)",
+                        "description": "심볼 (예: NVDA)",
                         "name": "symbol",
                         "in": "path",
                         "required": true
@@ -1433,6 +1451,15 @@
                     },
                     "500": {
                         "description": "서버 오류 발생 시 에러 메시지 반환",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "503": {
+                        "description": "장이 닫혔을 때 에러 메시지 반환",
                         "schema": {
                             "type": "object",
                             "additionalProperties": {
@@ -1457,7 +1484,7 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "심볼 (예: AAPL)",
+                        "description": "심볼 (예: NVDA)",
                         "name": "symbol",
                         "in": "path",
                         "required": true
@@ -1524,11 +1551,114 @@
                                 "type": "string"
                             }
                         }
+                    },
+                    "503": {
+                        "description": "장이 닫혔을 때 에러 메시지 반환",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
                     }
                 }
             }
         },
         "/api/v1/market/orders/{symbol}/sell": {
+            "post": {
+                "description": "지정가, 시장가 주문을 접수합니다.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Orders"
+                ],
+                "summary": "매도 주문",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "심볼 (예: NVDA)",
+                        "name": "symbol",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Bearer {API_KEY}",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "description": "주문 정보",
+                        "name": "order",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/template.CreateOrderRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "주문이 성공적으로 접수되었음을 알리는 메시지",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "잘못된 요청 시 에러 메시지 반환",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "인증 실패 시 에러 메시지 반환",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "심볼을 찾을 수 없을 때 에러 메시지 반환",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "서버 오류 발생 시 에러 메시지 반환",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "503": {
+                        "description": "장이 닫혔을 때 에러 메시지 반환",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                }
+            },
             "delete": {
                 "description": "기존 매도 주문을 취소합니다.",
                 "consumes": [
@@ -1544,7 +1674,7 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "심볼 (예: AAPL)",
+                        "description": "심볼 (예: NVDA)",
                         "name": "symbol",
                         "in": "path",
                         "required": true
@@ -1611,6 +1741,15 @@
                                 "type": "string"
                             }
                         }
+                    },
+                    "503": {
+                        "description": "장이 닫혔을 때 에러 메시지 반환",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
                     }
                 }
             },
@@ -1629,7 +1768,7 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "심볼 (예: AAPL)",
+                        "description": "심볼 (예: NVDA)",
                         "name": "symbol",
                         "in": "path",
                         "required": true
@@ -1690,6 +1829,15 @@
                     },
                     "500": {
                         "description": "서버 오류 발생 시 에러 메시지 반환",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "503": {
+                        "description": "장이 닫혔을 때 에러 메시지 반환",
                         "schema": {
                             "type": "object",
                             "additionalProperties": {
@@ -1828,7 +1976,7 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "심볼 (예: AAPL)",
+                        "description": "심볼 (예: NVDA)",
                         "name": "symbol",
                         "in": "path",
                         "required": true
@@ -1894,7 +2042,7 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "심볼 (예: AAPL)",
+                        "description": "심볼 (예: NVDA)",
                         "name": "symbol",
                         "in": "path",
                         "required": true
@@ -1963,6 +2111,13 @@
                         "description": "특정 타임스탬프 이후의 데이터를 받기 위한 옵션 (0을 입력하면 오늘 발생한 전체 데이터 수신)",
                         "name": "since",
                         "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Bearer {API_KEY}",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -2018,6 +2173,13 @@
                         "description": "특정 타임스탬프 이후의 데이터를 받기 위한 옵션 (0을 입력하면 오늘 발생한 전체 데이터 수신)",
                         "name": "since",
                         "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Bearer {API_KEY}",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -2073,6 +2235,13 @@
                         "description": "특정 타임스탬프 이후의 데이터를 받기 위한 옵션 (0을 입력하면 오늘 발생한 전체 데이터 수신)",
                         "name": "since",
                         "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Bearer {API_KEY}",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -2223,7 +2392,7 @@
                     "type": "integer"
                 },
                 "type": {
-                    "description": "e.g., \"limit\", \"market\", \"stop-limit\"",
+                    "description": "e.g., \"limit\", \"market\"",
                     "type": "string"
                 }
             }
@@ -2241,7 +2410,7 @@
                     "type": "integer"
                 },
                 "type": {
-                    "description": "e.g., \"limit\", \"market\", \"stop-limit\"",
+                    "description": "e.g., \"limit\", \"market\"",
                     "type": "string"
                 }
             }
